[package]
name = "molyuuctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
lazy_static = "1.4.0"
rust-ini = "0.21.0"
toml = "0.8.12"
log = "0.4.21"
dbus = "0.9.7"
libc = "0.2.153"
crossbeam = "0.8.4"
